# dice-rs

./: Cargo.toml  LICENSE  README.md  config.toml  rustfmt.toml  test.toml
src/: error.rs  lib.rs  macros.rs  main.rs
src/config/: cmd.rs  config.rs  gas.rs  macros.rs  mod.rs  name_list.rs  rocky.rs  star_type.rs
src/system_gen/: mod.rs
